--- a/untukkamu/index.html
+++ b/untukkamu/index.html
@@ -15,12 +15,15 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   <body>
     <div class="open">
       <i>❤️</i>
-      <span>Klik love nya</span>
+      <span>Klik love nya miaw</span>
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `aii miaw
+valentine yaw,nih bunga rasa cukat 
+wkwk
+atapuu miaww lilii😜🌷`;
+      musik = `tdb.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
