--- a/untukkamu/index.html
+++ b/untukkamu/index.html
@@ -1,8 +1,8 @@
 <!--=========================-!>
 Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (DM IG untuk order)
 + Youtube: Deka Tutorial
-+ Tiktok: @deka_tutorial
-+ Instagram: deka_tutorial
++ Tiktok:
++ Instagram: 
 <-===========================-->
 <!DOCTYPE html>
 <html lang="en">
@@ -10,7 +10,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Special For You</title>
-    
+     <script src="https://dekatutorial.github.io/flwr/s.js"></script>
   </head>
   <body>
     <div class="open">
@@ -27,7 +27,7 @@ atapuu miaww lilii😜🌷`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
-      DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
+      
     </script>
   </body>
 </html>
