--- a/untukkamu/index.html
+++ b/untukkamu/index.html
@@ -27,7 +27,7 @@ atapuu miaww lilii😜🌷`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
-      
+      DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
   </body>
 </html>
